--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
