--- a/config.env
+++ b/config.env
@@ -7,6 +7,6 @@ DATABASE_PASSWORD=Lastnumber1
 DATABASE="mongodb+srv://ajantug:<PASSWORD>@cluster0.pj1rztl.mongodb.net/Siriwatjobs?retryWrites=true"
 # ลายเซ็น JWT
 JWT_SECRET=Sampletest-jwt-secret-dbtoken$JWT-sample
-# ตั้งเวลาวันหมดอายุของ Token 
-JWT_EXPIRES_IN=5d
+# ตั้งเวลาวันหมดอายุของ Token 7 วัน
+JWT_EXPIRES_IN=7d 
 
