add testing database

--- a/config.env
+++ b/config.env
@@ -4,7 +4,10 @@ PORT=4000
 # ข้อมูลการเชื่อมต่อ Database
 DB_USERNAME=ajantug
 DATABASE_PASSWORD=Lastnumber1
+# database for production
 DATABASE="mongodb+srv://ajantug:<PASSWORD>@cluster0.pj1rztl.mongodb.net/Siriwatjobs?retryWrites=true"
+# database for testing
+# DATABASE="mongodb+srv://ajantug:<PASSWORD>@cluster0.pj1rztl.mongodb.net/Siriwatjobstest?retryWrites=true"
 # ลายเซ็น JWT
 JWT_SECRET=Sampletest-jwt-secret-dbtoken$JWT-sample
 # ตั้งเวลาวันหมดอายุของ Token 7 วัน
