--- a/config.env
+++ b/config.env
@@ -10,11 +10,17 @@ DATABASE="mongodb+srv://ajantug:<PASSWORD>@cluster0.pj1rztl.mongodb.net/Siriwatj
 # DATABASE="mongodb+srv://ajantug:<PASSWORD>@cluster0.pj1rztl.mongodb.net/Siriwatjobstest?retryWrites=true"
 # ลายเซ็น JWT
 JWT_SECRET=Sampletest-jwt-secret-dbtoken$JWT-sample
+
 # ตั้งเวลาวันหมดอายุของ Token 7 วัน Jwt รองรับเป็น String ได้
-JWT_EXPIRES_IN=7d 
+JWT_EXPIRES_IN=10d 
+
+# ตั้งเวลาสร้าง token ใหม่ ก่อนหมดอายุ 4 วัน ต้องแปลงให้อยู่ในรูปเเบบ millisecond
+JWT_REFRESH_EXPIRES_IN=4
+
 # ตั้งเวลาวันหมดอายุของ Cookie 7 วัน ต้องแปลงให้อยู่ในรูปเเบบ millisecond
 JWT_COOKIE_EXPIRES_IN=7
-# ตั้งเวลาสร้าง token ใหม่ ก่อนหมดอายุ 3 วัน ต้องแปลงให้อยู่ในรูปเเบบ millisecond
-JWT_REFRESH_EXPIRES_IN=3
+
+# สำหรับทดสอบเวลาหมดอายุของ Token 75 วินาที
+# JWT_EXPIRES_IN=10s
 
 
