--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
