--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "pug": "^3.0.2",
+    "simple-statistics": "^7.8.8",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
