feat: add dotenv configuration and duplicate payment check function; enhance query handling in getSuggestWithDate for improved performance and readability

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
   },
   "peacock.color": "#215732",
   "CodeGPT.apiKey": "OpenAI",
-  "editor.fontSize": 14.5
+  "editor.fontSize": 14.5,
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
